Setup git hook to run ESLint and Prettier on commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kanban Web</title>
   </head>
   <body>
-    <div id="root" class="z-10 min-h-svh flex flex-col"></div>
+    <div id="root" class="z-10 flex min-h-svh flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
